# comptime

./: .gitignore  CHANGELOG.md  README.md  comptime.cabal  shell.nix
bench/: Bench.hs
src/: CompileTime.hs  MyLib.hs
test/: Main.hs
