cabal-version:      3.0
name:               comptime
version:            0.1.0.0
synopsis:           A project demonstrating compile-time execution in Haskell
description:        This project implements compile-time execution of Haskell expressions using Template Haskell.
homepage:           https://github.com/qxrein/comptime
license:            BSD-3-Clause
license-file:       LICENSE
author:             qxrein
maintainer:         manavrj.07@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:      src
    exposed-modules:     MyLib
    other-modules:       CompileTime
    build-depends:       base >= 4.14 && < 5.0,
                        template-haskell >= 2.18 && < 2.20
    default-language:    Haskell2010

test-suite comptime-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:            Main.hs
    build-depends:       base >= 4.14 && < 5.0,
                        template-haskell >= 2.18 && < 2.20,
                        comptime
    default-language:    Haskell2010

executable comptime-exe
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base, comptime
  default-language:    Haskell2010

benchmark comptime-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  build-depends:       base, comptime, criterion
  default-language:    Haskell2010
